LocalizedDateICU should ignore timezones https://bugs.webkit.org/show_bug.cgi?id=83859

Reviewed by Hajime Morita.

udat_parse() and udat_format() shift the input date by the offset of the
default timezone. We don't need this behavior for type=date. So we
specify "GMT" to udat_open().

No new tests. This behavior depends on the timezone setting of the local machine.

* platform/text/LocalizedDateICU.cpp:
(WebCore::createShortDateFormatter):
Added. Common factory functio for UDateFormat. Use "GMT" instead of the
default timezone.
(WebCore::parseLocalizedDate): Use createShortDateFormatter().
(WebCore::formatLocalizedDate): ditto.

Canonical link: https://commits.webkit.org/101367@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114085 268f45cc-cd09-0410-ab3c-d52691b4dbfc